--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -12,12 +12,19 @@ main {
     height: auto;
 }
 
+/*ØLLISTE*/
+li>div:first-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 /*MOBIL*/
 @media screen and (max-width:910px) {
 
     /*TOP BILLEDE*/
-    main .topbillede {
+    main .topbillede { /*!!!!!!!!!FIKS DET HER!!!!!!!*/
         background-image: url(images/ølspecialiteter.png);
         background-repeat: no-repeat;
         background-size: cover;
@@ -32,12 +39,12 @@ main {
     /*BØLGER*/
     .en-bølge-omvendt img {
         position: relative;
-        bottom: 30px;
+        bottom: 10px;
     }
 
     img.en-bølge {
         position: relative;
-        top: 60px;
+        top: 10px;
     }
 
     .topbillede img {
@@ -61,24 +68,24 @@ main {
     .sideoverskrift:before {
         content: '';
         display: block;
-        width: 30px;
+        width: 40px;
         height: 1px;
 
         background: #CEA948;
         position: absolute;
-        left: 10%;
+        left: 5%;
         top: 50%;
     }
 
     .sideoverskrift:after {
         content: '';
         display: block;
-        width: 30px;
+        width: 40px;
         height: 1px;
 
         background: #CEA948;
         position: absolute;
-        right: 10%;
+        right: 5%;
         top: 50%;
     }
 
@@ -86,6 +93,7 @@ main {
     .kortudvalg {
         display: flex;
         flex-direction: column;
+
         color: #cea948;
 
         border-radius: 22px;
@@ -97,7 +105,7 @@ main {
     .kortudvalg div:first-child {
         width: 100%;
         height: 100px;
-        margin-bottom:100px;
+        margin-bottom:150px;
     }
 
     .kortudvalg div:first-child img {
@@ -112,17 +120,129 @@ main {
         display: flex;
         justify-content: center;
         flex-direction: column;
+        text-align: center;
 
-        padding: 50px 40px;
+     
 
     }
 
     .kortudvalg div:nth-child(2) h1 {
-        text-align: center;
         margin-bottom: 10px;
     }
 
+    /*ØL MENU STYLES*/
+    .ølmenu {
+        background-image: url(images/dåser2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+
+        height: auto;
+        width: 100%;
+
+    }
+
+    .ølliste {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-evenly;
+        text-align: left;
+    }
+
+    .faste-øl,
+    .nyeste-øl {
+        color: #CEA948;
+        background-color: #204653;
+        border: 1px solid #CEA948;
+        text-align: left;
+
+        border-radius: 22px;
+        width:90%;
+
+        /*margin-right: 5%;
+        margin-left: 5%;*/
+
+        padding-bottom: 40px;
+        margin-bottom: 30px;
+    }
+
+    .faste-øl>p,
+    .nyeste-øl>p {
+        display: flex;
+        justify-content: right;
+        
+        font-weight: 600;
+        font-size: 12pt;
+
+    }
+
+    ol li,
+    .faste-øl>p,
+    .nyeste-øl>p {
+        padding: 3% 5%;
+        list-style: none;
+    }
+
+    ol li div:nth-child(2) {
+        padding-right: 25%;
+    }
+
+    ol li div:nth-child(2) p{
+        font-size: 10pt;
+        line-height: 1.3;
+    }
+
+    ol h3 {
+        color: #EDC458;
+        font-size: 12pt;
+
+    }
+
+    /*ØL MENU OVERSKRIFTER*/
+
+    .faste-øl h2,
+    .nyeste-øl h2 {
+        margin: 40px auto 10px;
+        text-align: center;
+        max-width: 600px;
+        position: relative;
+
+        background-color: #204653;
+        color: #EDC458;
+        font-size: 20pt;
+    }
+
+    .faste-øl h2:before,
+    .nyeste-øl h2:before {
+        content: '';
+        display: block;
+        width: 60px;
+        height: 1px;
+
+        background: #EDC458;
+        position: absolute;
+        left: 5%;
+        top: 50%;
+
+    }
+
+    .faste-øl h2:after,
+    .nyeste-øl h2:after {
+        content: '';
+        display: block;
+        width: 60px;
+        height: 1px;
+
+        background: #EDC458;
+        position: absolute;
+        right: 5%;
+        top: 50%;
+    }
+
 }
+
+
 
 /*LAPTOP*/
 @media screen and (min-width: 910px) {
@@ -332,11 +452,7 @@ main {
 
     }
 
-    li>div:first-child {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+
 
     /*ØL MENU OVERSKRIFTER*/
 
