--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -12,19 +12,15 @@ main {
     height: auto;
 }
 
-/*ØLLISTE*/
-li>div:first-child {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 
 
 /*MOBIL*/
 @media screen and (max-width:910px) {
 
     /*TOP BILLEDE*/
-    main .topbillede { /*!!!!!!!!!FIKS DET HER!!!!!!!*/
+    main .topbillede {
+        /*!!!!!!!!!FIKS DET HER!!!!!!!*/
         background-image: url(images/ølspecialiteter.png);
         background-repeat: no-repeat;
         background-size: cover;
@@ -105,12 +101,12 @@ li>div:first-child {
     .kortudvalg div:first-child {
         width: 100%;
         height: 100px;
-        margin-bottom:150px;
+        margin-bottom: 150px;
     }
 
     .kortudvalg div:first-child img {
         width: 100%;
-        height:230px;
+        height: 230px;
         border-radius: 20px;
         border: 2px solid #cea948;
     }
@@ -122,12 +118,19 @@ li>div:first-child {
         flex-direction: column;
         text-align: center;
 
-     
+
 
     }
 
     .kortudvalg div:nth-child(2) h1 {
         margin-bottom: 10px;
+    }
+
+    /*ØLLISTE*/
+    li>div:first-child {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     /*ØL MENU STYLES*/
@@ -137,7 +140,6 @@ li>div:first-child {
         background-repeat: no-repeat;
 
         height: auto;
-        width: 100%;
 
     }
 
@@ -158,7 +160,7 @@ li>div:first-child {
         text-align: left;
 
         border-radius: 22px;
-        width:90%;
+        width: 90%;
 
         /*margin-right: 5%;
         margin-left: 5%;*/
@@ -171,7 +173,7 @@ li>div:first-child {
     .nyeste-øl>p {
         display: flex;
         justify-content: right;
-        
+
         font-weight: 600;
         font-size: 12pt;
 
@@ -180,7 +182,7 @@ li>div:first-child {
     ol li,
     .faste-øl>p,
     .nyeste-øl>p {
-        padding: 3% 5%;
+        padding: 5% 5%;
         list-style: none;
     }
 
@@ -188,7 +190,7 @@ li>div:first-child {
         padding-right: 25%;
     }
 
-    ol li div:nth-child(2) p{
+    ol li div:nth-child(2) p {
         font-size: 10pt;
         line-height: 1.3;
     }
@@ -198,6 +200,11 @@ li>div:first-child {
         font-size: 12pt;
 
     }
+
+   .pris{
+        font-size: small;
+    }
+
 
     /*ØL MENU OVERSKRIFTER*/
 
@@ -389,6 +396,13 @@ li>div:first-child {
 
     .kortudvalg div:nth-child(2) h1 {
         margin-bottom: 20px;
+    }
+
+    /*ØLLISTE*/
+    li>div:first-child {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 
     /*ØL MENU STYLES*/
