--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -138,6 +138,7 @@ nav a:nth-child(3):before {
     width: 50%;
     overflow: hidden;
     flex: 50%;
+    flex-wrap: wrap;
 }
 
 .container img {
@@ -145,6 +146,7 @@ nav a:nth-child(3):before {
     display: block;
     max-height: 400px;
     flex: 50%;
+    flex-wrap: wrap;
 
     transition: transform 2s;
 }
@@ -162,21 +164,12 @@ nav a:nth-child(3):before {
     text-align: left;
     padding: 100px;
     flex: 50%;
+    flex-wrap: wrap;
 }
 
 .text h2{
     margin-bottom:20px;
 }
-
-/*MOBIL*/
-@media (max-width: 800px) {
-
-    .container,
-    .sektioner .text {
-        flex: 100%;
-    }
-}
-
 
 /*Button*/
 .button {
@@ -200,4 +193,25 @@ nav a:nth-child(3):before {
     color: #CEA948;
     border-color: #CEA948;
     border-style: solid;
+}
+
+/*MOBIL*/
+@media (max-width: 910px) {
+
+.sektioner{
+    flex-flow: row wrap;
+    height: 700px;
+}
+.container img{
+    display: block;
+    order: 1;
+    width: 100%;
+    height: 300px;
+}
+.sektioner .text{
+    display: block;
+    order: 2;
+    width: 100%;
+    height: 400px;
+}
 }
