--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -1,175 +1,244 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-/*NAV A STREG UNDER VED AKTIV SIDE*/
-nav a:first-child{
-    position:relative;
-    color:#CEA948;
-}
-
-nav a:first-child:before{
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #CEA948;
-    transform-origin: left;
-    transform: scaleX(1);
-    text-decoration: underline;
-}
-
 /*GENERELLE REGLER*/
-body{
+body {
     background-color: #0E1E24;
 }
 
-section{
+section {
     display: flex;
 }
 
-h1{
+h1 {
     font-family: 'Playfair Display SC', serif;
     letter-spacing: 1px;
-    color:#CEA948;
+    color: #CEA948;
 
 }
-p{
+
+p {
     line-height: 1.3;
     font-size: 14pt;
     font-family: 'Arsenal', sans-serif;
     letter-spacing: 0.7px;
-    color:#CEA948;
-}
-
-/*BAGGRUNDSBILLEDE I TOPPEN*/
-.billedeet{
-    background: url(images/forsideomos.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 600px;
-}
-
-/*BØLGE*/
-.wave{
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 20px;
-    bottom: 45px;
-}
-
-/*OVERSKRIFT*/
-.overskrift {
-    display: flex;
-    justify-content: center;
-
-    text-align: center;
-    margin: 100px auto 80px;
-    max-width: 820;
-    position: relative;
-
     color: #CEA948;
-    font-size: 30pt;
-}
-
-.overskrift:before {
-    content: '';
-    display: block;
-    width: 400px;
-    height: 1px;
-
-    background: #CEA948;
-    position: absolute;
-    left: 10%;
-    top: 50%;
-}
-
-.overskrift:after {
-    content: '';
-    display: block;
-    width: 400px;
-    height: 1px;
-
-    background: #CEA948;
-    position: absolute;
-    right: 10%;
-    top: 50%;
-}
-
-/*FØRSTE SECTION MED TEKST*/
-.divet{
-    text-align: center;
-    padding-left: 300px;
-    padding-right: 300px;
-    padding-bottom: 50px;
-}
-
-/*ANDEN SECTION MED BILLEDE OG TEKST*/
-.sectionto{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 500px;
-}
-
-.billedeto{
-    background:url(images/glasomos.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 50%;
-}
-
-.divto{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align:left;
-
-    background-color: #204653;
-    width: 50%;
-    padding: 50px 30px;
-}
-
-.divto p{
-    margin-bottom:15px;
-}
-
-.divto h1{
-    margin-bottom: 20px;
-}
-
-/*BØLGE TO*/
-.wavetwo{
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 50px;
-    bottom: 40px;
-}
-
-/*TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE*/
-.sectiontre{
-    background: url(images/baggrundomos.png);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 600px;
-}
-.divtre p{
-    text-align: left;
-    padding-right: 800px;
-    margin-top: 50px;
-    padding-top: 60px;
-    padding-left: 50px;
 }
 
 /*RESPONSIV*/
+/*MOBIL*/
+@media screen and (max-width:910px) {
+
+    .billedeet {
+        background-image: url(images/forsideomos.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        position: relative;
+        top: 100px;
+
+        width: 100%;
+        height: 200px;
+    }
+
+    /*BØLGER*/
+    .wave .wavetwo {
+        position: relative;
+        bottom: 20px;
+    }
+
+    .overskrift {
+        margin: 130px auto 50px;
+        text-align: center;
+        max-width: 820;
+        position: relative;
+
+        color: #CEA948;
+        font-size: 12pt;
+    }
+
+    .overskrift:before {
+        content: '';
+        display: block;
+        width: 40px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        left: 5%;
+        top: 50%;
+    }
+
+    .overskrift:after {
+        content: '';
+        display: block;
+        width: 40px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        right: 5%;
+        top: 50%;
+    }
+
+    .sectionet{
+        display: flex;
+        flex-direction: column;
+
+        color: #CEA948;
+    }
+}
+
+/*LAPTOP*/
+@media screen and (min-width: 910px) {
+
+    /*NAV A STREG UNDER VED AKTIV SIDE*/
+    nav a:first-child {
+        position: relative;
+        color: #CEA948;
+    }
+
+    nav a:first-child:before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #CEA948;
+        transform-origin: left;
+        transform: scaleX(1);
+        text-decoration: underline;
+    }
+
+    /*BAGGRUNDSBILLEDE I TOPPEN*/
+    .billedeet {
+        background-image: url(images/forsideomos.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 600px;
+    }
+
+    /*BØLGE*/
+    .wave {
+        position: relative;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 20px;
+        bottom: 45px;
+    }
+
+    /*OVERSKRIFT*/
+    .overskrift {
+        display: flex;
+        justify-content: center;
+
+        text-align: center;
+        margin: 100px auto 80px;
+        max-width: 820;
+        position: relative;
+
+        color: #CEA948;
+        font-size: 30pt;
+    }
+
+    .overskrift:before {
+        content: '';
+        display: block;
+        width: 400px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        left: 10%;
+        top: 50%;
+    }
+
+    .overskrift:after {
+        content: '';
+        display: block;
+        width: 400px;
+        height: 1px;
+
+        background: #CEA948;
+        position: absolute;
+        right: 10%;
+        top: 50%;
+    }
+
+    /*FØRSTE SECTION MED TEKST*/
+    .divet {
+        text-align: center;
+        padding-left: 300px;
+        padding-right: 300px;
+        padding-bottom: 50px;
+    }
+
+    /*ANDEN SECTION MED BILLEDE OG TEKST*/
+    .sectionto {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 500px;
+    }
+
+    .billedeto {
+        background: url(images/glasomos.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 50%;
+    }
+
+    .divto {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        text-align: left;
+
+        background-color: #204653;
+        width: 50%;
+        padding: 50px 30px;
+    }
+
+    .divto p {
+        margin-bottom: 15px;
+    }
+
+    .divto h1 {
+        margin-bottom: 20px;
+    }
+
+    /*BØLGE TO*/
+    .wavetwo {
+        position: relative;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 50px;
+        bottom: 40px;
+    }
+
+    /*TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE*/
+    .sectiontre {
+        background: url(images/baggrundomos.png);
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 600px;
+    }
+
+    .divtre p {
+        text-align: left;
+        padding-right: 800px;
+        margin-top: 50px;
+        padding-top: 60px;
+        padding-left: 50px;
+    }
+
+}
