--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -17,7 +17,6 @@ h1 {
     font-family: 'Playfair Display SC', serif;
     letter-spacing: 1px;
     color: #CEA948;
-
 }
 
 p {
@@ -28,67 +27,198 @@ p {
     color: #CEA948;
 }
 
+
+
+/*GENERELLE REGLER FOR OVERSKRIFT*/
+.overskrift {
+    margin: 130px auto 50px;
+    text-align: center;
+    max-width: 820;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 12pt;
+}
+
+.overskrift:before {
+    content: '';
+    display: block;
+    width: 40px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 5%;
+    top: 50%;
+}
+
+.overskrift:after {
+    content: '';
+    display: block;
+    width: 40px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 5%;
+    top: 50%;
+}
+
+/*GENERELLE REGLER FOR BILLEDER*/
+.billedeto {
+    background: url(images/glasomos.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 50%;
+}
+
+.sectiontre {
+    background: url(images/baggrundomos.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 600px;
+}
+
+.billedeet {
+    background-image: url(images/forsideomos.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+}
+
 /*RESPONSIV*/
 /*MOBIL*/
 @media screen and (max-width:910px) {
 
-    .billedeet {
-        background-image: url(images/forsideomos.png);
-        background-repeat: no-repeat;
+    /*BAGGRUNDSBILLEDE I TOPPEN*/
+    .billedeet{
         background-size: cover;
+        background-repeat: no-repeat;
 
         position: relative;
-        top: 100px;
+        top: 50px;
 
         width: 100%;
         height: 200px;
     }
 
     /*BØLGER*/
+    .wave img{
+        position: relative;
+        bottom: 50px;
+        height: 60px;
+        top: 70px;
+        width: 100%;
+    }
+
+    .wavetwo{
+        position: relative;
+        height: 50px;
+        width: 100%;
+        bottom: 10px;
+    }
     .wave .wavetwo {
         position: relative;
         bottom: 20px;
     }
 
-    .overskrift {
-        margin: 130px auto 50px;
-        text-align: center;
-        max-width: 820;
-        position: relative;
 
-        color: #CEA948;
-        font-size: 12pt;
+    /*OVERSKRIFT*/
+    .overskrift{
+        display: flex;
+        justify-content: center;
     }
 
     .overskrift:before {
         content: '';
         display: block;
-        width: 40px;
+        width: 80px;
         height: 1px;
-
+    
         background: #CEA948;
         position: absolute;
-        left: 5%;
+        left: 15%;
         top: 50%;
     }
-
+    
     .overskrift:after {
         content: '';
         display: block;
-        width: 40px;
+        width: 80px;
         height: 1px;
-
+    
         background: #CEA948;
         position: absolute;
-        right: 5%;
+        right: 15%;
         top: 50%;
     }
 
+    /*SECTIONS MED TEKST OG BILLEDER*/
     .sectionet{
         display: flex;
-        flex-direction: column;
-
         color: #CEA948;
+    }
+
+    .sectionto, .sectiontre{
+        display: flex;
+        flex-direction: column;
+        height: 300px;
+    }
+
+    .sectionto{
+        background-color: #204653;
+        height: 600px;
+    }
+
+    .billedeto{
+        background-size: cover;
+        background-repeat: no-repeat;
+
+        position: relative;
+
+        width: 100%;
+        height: 500px;
+    }
+
+    .sectionet p{
+        padding-bottom: 20px;
+
+        text-align: center;
+
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .sectiontre p{
+        padding-top: 30px;
+        text-align: center;
+
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .sectionto p{
+        padding-bottom: 30px;
+
+        text-align: center;
+
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    .sectionto h1{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: center;
+
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    /*MØRK BAGGRUND PÅ BILLEDE*/
+    .divtre{
+        background:rgba(0,0,0,0.9);
     }
 }
 
@@ -113,15 +243,6 @@ p {
         transform-origin: left;
         transform: scaleX(1);
         text-decoration: underline;
-    }
-
-    /*BAGGRUNDSBILLEDE I TOPPEN*/
-    .billedeet {
-        background-image: url(images/forsideomos.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 600px;
     }
 
     /*BØLGE*/
@@ -188,13 +309,6 @@ p {
         height: 500px;
     }
 
-    .billedeto {
-        background: url(images/glasomos.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 50%;
-    }
-
     .divto {
         display: flex;
         justify-content: center;
@@ -225,13 +339,6 @@ p {
     }
 
     /*TREDJE SECTION MED TEKST OG BAGGRUNDSBILLEDE*/
-    .sectiontre {
-        background: url(images/baggrundomos.png);
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        height: 600px;
-    }
 
     .divtre p {
         text-align: left;
