--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -1,4 +1,4 @@
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -33,7 +33,7 @@ p {
 .overskrift {
     margin: 130px auto 50px;
     text-align: center;
-    max-width: 820;
+    max-width: 820px;
     position: relative;
 
     color: #CEA948;
@@ -129,6 +129,7 @@ p {
     .overskrift{
         display: flex;
         justify-content: center;
+        margin: 70px auto 30px;
     }
 
     .overskrift:before {
@@ -179,23 +180,23 @@ p {
         position: relative;
 
         width: 100%;
-        height: 500px;
+        height: 600px;
     }
 
     .sectionet p{
-        padding-bottom: 20px;
+        padding-bottom: 30px;
 
         text-align: center;
 
-        margin-left: 30px;
-        margin-right: 30px;
+        margin-left: 8%;
+        margin-right: 8%;
     }
     .sectiontre p{
         padding-top: 30px;
         text-align: center;
 
-        margin-left: 30px;
-        margin-right: 30px;
+        margin-left: 8%;
+        margin-right: 8%;
     }
 
     .sectionto p{
@@ -203,22 +204,22 @@ p {
 
         text-align: center;
 
-        margin-left: 40px;
-        margin-right: 40px;
+        margin-left: 8%;
+        margin-right: 8%;
     }
 
     .sectionto h1{
-        padding-top: 10px;
+        padding-top: 30px;
         padding-bottom: 10px;
         text-align: center;
 
-        margin-left: 30px;
-        margin-right: 30px;
+        margin-left: 8%;
+        margin-right: 8%;
     }
 
     /*MØRK BAGGRUND PÅ BILLEDE*/
     .divtre{
-        background:rgba(0,0,0,0.9);
+        background:rgba(0,0,0,0.8);
     }
 }
 
@@ -262,7 +263,7 @@ p {
 
         text-align: center;
         margin: 100px auto 80px;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
